--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity">
 
     <fragment
+        android:id="@+id/navHostFragmentNotView"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,6 +18,7 @@
         app:navGraph="@navigation/nav_graph" />
 
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/navHostFragmentContainerView"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
