--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -6,11 +6,12 @@
     android:background="@android:color/holo_purple"
     tools:context=".DashboardFragment">
 
-    <TextView
+    <Button
+        android:id="@+id/btnOpenProfile"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Dashboard Fragment"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Open Profile Screen"
         android:textColor="@color/white"
         android:textSize="21sp" />
 
