Add Activity and Dialog (DialogFragment and BottomSheetDialogFragment) to nav_graph

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,18 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_purple"
+    android:orientation="vertical"
     tools:context=".DashboardFragment">
 
     <Button
         android:id="@+id/btnOpenProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:text="Open Profile Screen"
         android:textColor="@color/white"
         android:textSize="21sp" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btnOpenSettingsDialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Open Settings Dialog Screen"
+        android:textColor="@color/white"
+        android:textSize="21sp" />
+
+    <Button
+        android:id="@+id/btnOpenSecondActivity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Open Second Activity Screen"
+        android:textColor="@color/white"
+        android:textSize="21sp" />
+
+    <Button
+        android:id="@+id/btnOpenBottomSheetDialogFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Open Bottom Sheet Dialog Screen"
+        android:textColor="@color/white"
+        android:textSize="21sp" />
+
+</LinearLayout>
