--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -47,4 +47,12 @@
         android:textColor="@color/white"
         android:textSize="21sp" />
 
+    <Button
+        android:id="@+id/btnOpenTransferFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Open Transfer Screen"
+        android:textColor="@color/white"
+        android:textSize="21sp" />
+
 </LinearLayout>
